# mongodb-django-rest

./: .gitignore  DOCUMENTATION.md  MANIFEST.in  PACKAGE_SUMMARY.md  PUBLISHING_GUIDE.md  README.md  USAGE_EXAMPLES.md  __init__.py  connection.py  context_managers.py  dereference.py  errors.py  pyproject.toml  test_package.py
base/: common.py  fields.py
mongodb/: connection.py  document.py  fields.py  pymongo_support.py  setup.py
mongodb/base/: datastructures.py  document.py  metaclasses.py
mongodb/queryset/: __init__.py  base.py  field_list.py  visitor.py
mongodb/rest_framework/: fields.py  serializers.py  validators.py
queryset/: manager.py  queryset.py  transform.py
rest_framework/: repr.py  utils.py
